--- a/.github/workflows/DockerAndroidAPK.yml
+++ b/.github/workflows/DockerAndroidAPK.yml
@@ -5,7 +5,7 @@ on:
  
 jobs:
   Android_build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     container: reactnativecommunity/react-native-android
     steps:
     - uses: actions/checkout@v2
